--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Creuna.EPiServer.RedirectHandler</id>
     <title>Redirect Handler for EPiServer</title>
-    <version>1.3.1</version>
+    <version>2.0.0</version>
     <authors>Creuna, Joachim Løvf</authors>
     <owners>Creuna</owners>
     <iconUrl>http://www.creuna.no/favicon.ico</iconUrl>
@@ -20,7 +20,7 @@
     </dependencies>
     <tags>EPiServer redirects</tags>
     <releaseNotes>
-      Renamed menu component to avoid collisions with other projects.
+      Added pluggable logging interface.
     </releaseNotes>
   </metadata>
   <files>
