--- a/src/Creuna.Episerver.RedirectHandler.TestApp/packages.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/packages.config
@@ -21,6 +21,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NuGet.Core" version="2.5.0" targetFramework="net451" />
+  <package id="Serilog" version="2.2.1" targetFramework="net451" />
+  <package id="Serilog.Sinks.File" version="3.0.1" targetFramework="net451" />
+  <package id="Serilog.Sinks.Literate" version="2.0.0" targetFramework="net451" />
+  <package id="Serilog.Sinks.RollingFile" version="3.0.1" targetFramework="net451" />
   <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net451" />
   <package id="structuremap-signed" version="3.1.6.186" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
