--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
@@ -14,9 +14,9 @@
     <language>en-US</language>
     <dependencies>
       <dependency id="DotNetZip" version="1.9.1.8" />
-      <dependency id="EPiServer.Framework" version="9.1.0" />
-      <dependency id="EPiServer.CMS.Core" version="9.1.0" />
-      <dependency id="EPiServer.CMS.UI.Core" version="9.2.0" />
+      <dependency id="EPiServer.Framework" version="[9.1.0, 11.0)" />
+      <dependency id="EPiServer.CMS.Core" version="[9.1.0, 11.0)" />
+      <dependency id="EPiServer.CMS.UI.Core" version="[9.2.0, 11.0)" />
       <dependency id="Microsoft.AspNet.Mvc" version="5.0.0" />
     </dependencies>
     <tags>EPiServer redirects</tags>
